# Food-Truck-Finder

./: .gitignore  Cargo.toml  README.md  makefile
frontend/: Cargo.toml  Trunk.toml  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  lib.rs  main.rs  main.ts
frontend/src/assets/: main.css
frontend/src/components/: Popup.vue
frontend/src/router/: index.ts
frontend/src/utils/: fetch_data.ts  search.ts
frontend/src/views/: AdminView.vue  MapView.vue  TestView.vue  VendorView.vue
ftf-backend/: Cargo.toml
ftf-backend/src/: database.rs  main.rs  server.rs  utils.rs
ftf-backend/src/database/: models.rs
ftf-backend/src/server/: app.rs  handlers.rs  middleware.rs
ftf-backend/src/server/middleware/: authorize.rs
ftf-backend/src/server/middleware/authorize/: error.rs  future.rs  layer.rs
ftf-backend/src/surreal/: enums.rs  mod.rs  structs.rs
ftf-backend/tests/: quick_dev.rs
ftf-frontend/: Cargo.toml  Trunk.toml
ftf-frontend/src/: main.rs
server/: Cargo.toml
server/src/: database.rs  main.rs  server.rs  utils.rs
server/src/database/: models.rs
server/src/server/: app.rs  handlers.rs  middleware.rs  state.rs
server/src/server/handlers/: delete.rs  get.rs  patch.rs  post.rs
server/src/utils/: auth.rs  token.rs
server/tests/: quick_dev.rs
