[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0" , features = ["csr"] }
wasm-bindgen-futures = "0.4"
gloo-net = "0.2.0"
reqwasm = "0.5.0"
gloo = "0.11.0"
oauth2 = "4.4.2"
yew-oauth2 = "0.9.1"
