[package]
name = "ftf-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
eyre = "0.6.9"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
httpc-test = "0.1.1"
anyhow = { version = "1.0" }
surrealdb = "1.0.0"
geoutils = { version = "0.5.1", features = ["serde"] }
chrono = "0.4.31"
