[package]
name = "ftf-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
wasm-bindgen-futures = "0.4"
gloo-net = "0.2.0"
reqwasm = "0.5.0"
gloo = "0.11.0"
