[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors", "fs" ] }
httpc-test = "0.1.1"
surrealdb = "1.0.0"
geoutils = { version = "0.5.1", features = ["serde"] }
chrono = "0.4.31"
uuid = { version = "1.6.1", features = [ "v4", "serde", "macro-diagnostics" ]}
csv = "1.3.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
argon2 = "0.5.2"
colored = "2.1.0"
reqwest = { version = "0.11.22", features = [ "json", "blocking" ] }
jsonwebtoken = "9.2.0"
oauth2 = "4.4.2"
openssl = "0.10.61"
tower = "0.4.13"
dotenv = "0.15.0"
axum-server = { version = "^0.6", features = [ "tls-openssl" ] }
log = "0.4.20"
color-eyre = "0.6.2"
